[Update] add spring dependencies